--- a/outbox_api/api-module/pom.xml
+++ b/outbox_api/api-module/pom.xml
@@ -24,5 +24,10 @@
             <artifactId>domain-module</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.patterns</groupId>
+            <artifactId>repository-module</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
