--- a/outbox_api/main-module/pom.xml
+++ b/outbox_api/main-module/pom.xml
@@ -34,6 +34,16 @@
             <artifactId>domain-module</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.patterns</groupId>
+            <artifactId>repository-module</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.patterns</groupId>
+            <artifactId>infrastructure-module</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
