--- a/outbox_api/pom.xml
+++ b/outbox_api/pom.xml
@@ -27,8 +27,8 @@
 		<module>kafka-producer</module>
         <module>domain-module</module>
         <module>repository-module</module>
-        <module>infrastructure-module</module>
-    </modules>
+		<module>kafka-consumer</module>
+	</modules>
 	<scm>
 		<connection/>
 		<developerConnection/>
