--- a/outbox_api/kafka-consumer/pom.xml
+++ b/outbox_api/kafka-consumer/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>infrastructure-module</artifactId>
+    <artifactId>kafka-consumer</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
